force-app/main/default/objects/DX_Access_Managment__c/DX_Access_Managment__c.object-meta.xml
<CustomObject>
    <label>Access Managment</label>
    <nameField>
        <label>Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Managment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>