force-app/main/default/objects/DX_Access_Managment__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Access Managment</relationshipLabel>
    <relationshipName>Access_Managment</relationshipName>
    <type>Lookup</type>
</CustomField>