force-app/main/default/objects/DX_Access_Managment__c/fields/Accounting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For billing inquiries.</inlineHelpText>
    <label>Accounting Contact</label>
    <type>Checkbox</type>
</CustomField>