force-app/main/default/objects/DX_Access_Managment__c/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can request permissions and user changes via ticket submission.</inlineHelpText>
    <label>Admin</label>
    <type>Checkbox</type>
</CustomField>