force-app/main/default/objects/DX_Access_Managment__c/fields/Authorize_3rd_Party_Access__c.field-meta.xml
<CustomField>
    <fullName>Authorize_3rd_Party_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>May submit access requests on the behalf of individuals that do not have &quot;Physical Access&quot; on this list</inlineHelpText>
    <label>Authorize 3rd Party Access</label>
    <type>Checkbox</type>
</CustomField>