force-app/main/default/objects/DX_Access_Managment__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Access Managment</relationshipLabel>
    <relationshipName>Access_Managment</relationshipName>
    <type>Lookup</type>
</CustomField>