force-app/main/default/objects/DX_Access_Managment__c/fields/Contracts_Contact__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For legal/contract inquiries.</inlineHelpText>
    <label>Contracts Contact</label>
    <type>Checkbox</type>
</CustomField>