force-app/main/default/objects/DX_Access_Managment__c/fields/Edit_Access_Lists__c.field-meta.xml
<CustomField>
    <fullName>Edit_Access_Lists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Access Lists</label>
    <type>Checkbox</type>
</CustomField>