force-app/main/default/objects/DX_Access_Managment__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For emergency inquiries.</inlineHelpText>
    <label>Emergency Contact</label>
    <type>Checkbox</type>
</CustomField>