force-app/main/default/objects/DX_Access_Managment__c/fields/Emergency_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will be added to our email distribution list for facility emergency push notifications.</inlineHelpText>
    <label>Emergency Notifications</label>
    <type>Checkbox</type>
</CustomField>