force-app/main/default/objects/DX_Access_Managment__c/fields/Logistics_Requests__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grants privilege to create Logistics requests in the Customer Portal.</description>
    <inlineHelpText>Grants privilege to create Logistics requests in the Customer Portal.</inlineHelpText>
    <label>Logistics Requests</label>
    <type>Checkbox</type>
</CustomField>