force-app/main/default/objects/DX_Access_Managment__c/fields/Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For marketing inquiries.</inlineHelpText>
    <label>Marketing Contact</label>
    <type>Checkbox</type>
</CustomField>