force-app/main/default/objects/DX_Access_Managment__c/fields/N1_1102_Grand__c.field-meta.xml
<CustomField>
    <fullName>N1_1102_Grand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this user can make service requests and see information related to their account at 1102 Grand.</description>
    <inlineHelpText>Indicates that this user can make service requests and see information related to their account at 1102 Grand.</inlineHelpText>
    <label>1102 Grand</label>
    <type>Checkbox</type>
</CustomField>