force-app/main/default/objects/DX_Access_Managment__c/fields/N1_1301_Fannin__c.field-meta.xml
<CustomField>
    <fullName>N1_1301_Fannin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this user can make service requests and see information related to their account at 1301 Fannin.</description>
    <inlineHelpText>Indicates that this user can make service requests and see information related to their account at 1301 Fannin.</inlineHelpText>
    <label>1301 Fannin</label>
    <type>Checkbox</type>
</CustomField>