force-app/main/default/objects/DX_Access_Managment__c/fields/N1_210_N_Tucker__c.field-meta.xml
<CustomField>
    <fullName>N1_210_N_Tucker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this user can make service requests and see information related to their account at 210 N Tucker.</description>
    <inlineHelpText>Indicates that this user can make service requests and see information related to their account at 210 N Tucker.</inlineHelpText>
    <label>210 N Tucker</label>
    <type>Checkbox</type>
</CustomField>