force-app/main/default/objects/DX_Access_Managment__c/fields/N1_401_N_Broad__c.field-meta.xml
<CustomField>
    <fullName>N1_401_N_Broad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this user can make service requests and see information related to their account at 401 N Broad.</description>
    <inlineHelpText>Indicates that this user can make service requests and see information related to their account at 401 N Broad.</inlineHelpText>
    <label>401 N Broad</label>
    <type>Checkbox</type>
</CustomField>