force-app/main/default/objects/DX_Access_Managment__c/fields/N1_701_W_Henry__c.field-meta.xml
<CustomField>
    <fullName>N1_701_W_Henry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this user can make service requests and see information related to their account at 701 W Henry.</description>
    <inlineHelpText>Indicates that this user can make service requests and see information related to their account at 701 W Henry.</inlineHelpText>
    <label>701 W Henry</label>
    <type>Checkbox</type>
</CustomField>