force-app/main/default/objects/DX_Access_Managment__c/fields/N1_717_S_Wells__c.field-meta.xml
<CustomField>
    <fullName>N1_717_S_Wells__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this user can make service requests and see information related to their account at 717 S Wells.</description>
    <inlineHelpText>Indicates that this user can make service requests and see information related to their account at 717 S Wells.</inlineHelpText>
    <label>717 S Wells</label>
    <type>Checkbox</type>
</CustomField>