force-app/main/default/objects/DX_Access_Managment__c/fields/N1_7801_Nieman_Road__c.field-meta.xml
<CustomField>
    <fullName>N1_7801_Nieman_Road__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this user can make service requests and see information related to their account at 7801 Nieman Road.</description>
    <inlineHelpText>Indicates that this user can make service requests and see information related to their account at 7801 Nieman Road.</inlineHelpText>
    <label>7801 Nieman Road</label>
    <type>Checkbox</type>
</CustomField>