force-app/main/default/objects/DX_Access_Managment__c/fields/N1_900_Walnut__c.field-meta.xml
<CustomField>
    <fullName>N1_900_Walnut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this user can make service requests and see information related to their account at 900 Walnut.</description>
    <inlineHelpText>Indicates that this user can make service requests and see information related to their account at 900 Walnut.</inlineHelpText>
    <label>900 Walnut</label>
    <type>Checkbox</type>
</CustomField>