force-app/main/default/objects/DX_Access_Managment__c/fields/N1_Indy_Telcom__c.field-meta.xml
<CustomField>
    <fullName>N1_Indy_Telcom__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this user can make service requests and see information related to their account at Indy Telcom Center.</description>
    <inlineHelpText>Indicates that this user can make service requests and see information related to their account at Indy Telcom Center.</inlineHelpText>
    <label>Indy Telcom Center</label>
    <type>Checkbox</type>
</CustomField>