force-app/main/default/objects/DX_Access_Managment__c/fields/N1_Inventory_Contact__c.field-meta.xml
<CustomField>
    <fullName>N1_Inventory_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Provides access in Customer Portal to see Account Inventory.</description>
    <label>Inventory Contact</label>
    <type>Checkbox</type>
</CustomField>