force-app/main/default/objects/DX_Access_Managment__c/fields/Operations_Contact__c.field-meta.xml
<CustomField>
    <fullName>Operations_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contacts with this checked will receive Maintenance/Operational Notifications related to their Account.</description>
    <inlineHelpText>Contacts with this checked will receive Maintenance/Operational Notifications related to their Account.</inlineHelpText>
    <label>Operations Contact</label>
    <type>Checkbox</type>
</CustomField>