force-app/main/default/objects/DX_Access_Managment__c/fields/Order_Change_Cancel_Cross_Connects__c.field-meta.xml
<CustomField>
    <fullName>Order_Change_Cancel_Cross_Connects__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grants privilege to create New/Disconnect/Change Cross Connect requests in the Customer Portal.</description>
    <inlineHelpText>Grants privilege to create New/Disconnect/Change Cross Connect requests in the Customer Portal.</inlineHelpText>
    <label>Cross Connect Requests</label>
    <type>Checkbox</type>
</CustomField>