force-app/main/default/objects/DX_Access_Managment__c/fields/Permanent_Access__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer Employee who will receive a permanent access badge which provides 24x7 unannounced, unsupervised access to facility &amp; customer assigned space.</inlineHelpText>
    <label>Permanent Access</label>
    <type>Checkbox</type>
</CustomField>