force-app/main/default/objects/DX_Access_Managment__c/fields/Physical_Access__c.field-meta.xml
<CustomField>
    <fullName>Physical_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer Visitor/Contractor who can gain access to facility &amp; customer assigned space, without additional approval.</inlineHelpText>
    <label>Physical Access</label>
    <type>Checkbox</type>
</CustomField>