force-app/main/default/objects/DX_Access_Managment__c/fields/Position_Role__c.field-meta.xml
<CustomField>
    <fullName>Position_Role__c</fullName>
    <label>Position/Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>