force-app/main/default/objects/DX_Access_Managment__c/fields/Request_Services_RH__c.field-meta.xml
<CustomField>
    <fullName>Request_Services_RH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grants privilege to create Remote Hands requests in the Customer Portal.</description>
    <inlineHelpText>Grants privilege to create Remote Hands requests in the Customer Portal.</inlineHelpText>
    <label>Remote Hands Requests</label>
    <type>Checkbox</type>
</CustomField>