force-app/main/default/objects/DX_Access_Managment__c/fields/Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For inquiries on expansion of services.</inlineHelpText>
    <label>Sales Contact</label>
    <type>Checkbox</type>
</CustomField>