force-app/main/default/objects/DX_Access_Managment__c/fields/Super_Admin__c.field-meta.xml
<CustomField>
    <fullName>Super_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can apply permission changes via Production Portal and request user changes via ticket</inlineHelpText>
    <label>Super Admin</label>
    <type>Checkbox</type>
</CustomField>