force-app/main/default/objects/DX_Access_Managment__c/fields/View_Assets__c.field-meta.xml
<CustomField>
    <fullName>View_Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Assets</label>
    <type>Checkbox</type>
</CustomField>