force-app/main/default/objects/DX_Access_Managment__c/fields/View_Invoices__c.field-meta.xml
<CustomField>
    <fullName>View_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>May request billing inquiries.</inlineHelpText>
    <label>View Invoices</label>
    <type>Checkbox</type>
</CustomField>