force-app/main/default/objects/DX_Access_Managment__c/fields/View_Master_Agreements__c.field-meta.xml
<CustomField>
    <fullName>View_Master_Agreements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Master Agreements</label>
    <type>Checkbox</type>
</CustomField>