force-app/main/default/objects/DX_Access_Managment__c/fields/View_Service_Orders__c.field-meta.xml
<CustomField>
    <fullName>View_Service_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Service Orders</label>
    <type>Checkbox</type>
</CustomField>